[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lsyzwm-master-sdk"
version = "0.0.1"
description = "LSYZWM Master SDK - 分布式任务管理系统主节点 SDK，提供 RPC 和 ZooKeeper 客户端"
requires-python = ">=3.8"
dependencies = [
    "kazoo==2.10.0"
]

[project.optional-dependencies]
dev = [
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 180
